# SWE-Playground

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  index.html  mypy.ini  pyproject.toml
.github/workflows/: test.yml
evaluation_prompts/: commit0.j2  swebench.j2
scripts/: load_env_vars.sh
swe_play/: __init__.py
swe_play/prompts/: apply-issue-openhands.jinja  apply-issue-swt-openhands.jinja  common-project-prefix-system.jinja  create-unit-tests-openhands.jinja  finish-task-openhands.jinja  fix-dockerfile-openhands.jinja  fix-issue-openhands.jinja  generate-unit-test-continue-openhands.jinja  generate-unit-test-openhands.jinja  generate-unit-tests-openhands.jinja  initialize-project-repo-and-tasks-openhands.jinja  propose-issue-system.jinja  propose-issue-user.jinja  propose-next-project-system.jinja  propose-next-project-user.jinja  propose-projects-system.jinja  propose-projects-user.jinja  propose-tasks-openhands.jinja  propose-tasks-system.jinja  propose-tasks-user-continue.jinja  propose-tasks-user.jinja  replace-functions-openhands.jinja  reproduce-issue-openhands.jinja  setup-project-repo-openhands.jinja  unit-test-system.jinja  unit-test-user.jinja
swe_play/propose/: PROPOSE_README.md  README.md  pipeline.py  project.py  propose_projects.py  propose_tasks.py  setup_repo.py
swe_play/propose/repo_starter/c++/: CMakeLists.txt  Dockerfile  tasks.md
swe_play/rollout/: README.md  ROLLOUT_README.md  commit0.py  (+3 more)
tests/: test_prompt_retriever.py
train/: dataset_info.json  train_sweplay_raw.yaml  train_sweplay_sequence_parallelism.yaml
(+14 files in other folders)
