[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swe_play"]

[project]
name = "swe-play"
version = "0.1.0"
description = "A playground for training versatile coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]



